danuri-backend/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: danuri-backend
  namespace: danuri
spec:
  selector:
    app: danuri-backend
  ports:
    - name: http
      port: 80
      targetPort: 8080
    - name: monitoring
      port: 8081
      targetPort: 8081
  type: ClusterIP
